# DiscordJmPoster

./: Dockerfile  apitest.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
