[project]
name = "discordjmposter"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "discord-py==2.6.4",
    "fastapi>=0.124.4",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
    "discord-py>2.6.0",
    "requests>=2.32.5",
    "opencc>=1.1.9",
]
